--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                             </div>
                             <div class="col-sm-6">
                                 <div class="team-member">
-                                    <img src="img/team/squash.jpg" class="img-responsive img-circle" alt="">
+                                    <img src="img/team/zoe.jpg" class="img-responsive img-circle" alt="">
                                     <h4>Zoë Balkwell</h4>
                                     <p class="text-muted">Full Stack Developer and BA</p>
                                     <ul class="list-inline social-buttons">
