--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Experience</h2>
-                    <h3 class="section-subheading text-muted">Over 2 years of Investment Banking experience and a passion for start ups.</h3>
+                    <h3 class="section-subheading text-muted">Over 3 years of Investment Banking experience and a passion for start ups.</h3>
                 </div>
             </div>
             <div class="row">
@@ -231,7 +231,7 @@
                 <div class="col-lg-12">
                     <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row">
-                            <div class="col-md-6">
+<!--                             <div class="col-md-6">
                                 <div class="form-group">
                                     <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
                                     <p class="help-block text-danger"></p>
@@ -248,10 +248,10 @@
                                     <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
-                            </div>
+                            </div> -->
                             <div class="col-sm-6">
                                 <div class="team-member">
-                                    <img src="img/team/zoe.jpg" class="img-responsive img-circle" alt="">
+                                    <img src="img/team/zoe.jpg" class="img-responsive img-rounded" alt="">
                                     <h4>Zoë Balkwell</h4>
                                     <p class="text-muted">Full Stack Developer and BA</p>
                                     <ul class="list-inline social-buttons">
@@ -280,7 +280,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Zoë N. Balkwell's Website 2014</span>
+                    <span class="copyright">Copyright &copy; Zoë N. Balkwell's Website 2015</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
