--- a/index.html
+++ b/index.html
@@ -222,16 +222,14 @@
     <section id="contact">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Contact Me</h2>
-                    <h3 class="section-subheading text-muted">You can contact me using the attached links, or via the form.</h3>
-                </div>
-            </div>
-            <div class="row">
                 <div class="col-lg-12">
                     <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row">
-<!--                             <div class="col-md-6">
+                            <div class="col-sm-6 text-center">
+                                <h2 class="section-heading">Contact Me</h2>
+                                <h3 class="section-subheading text-muted">You can contact me using the attached links, or via the form.</h3>
+                            </div>
+<!--                        <div class="col-md-6">
                                 <div class="form-group">
                                     <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
                                     <p class="help-block text-danger"></p>
@@ -265,10 +263,10 @@
                                 </div>
                               </div>
                             <div class="clearfix"></div>
-                            <div class="col-lg-12 text-center">
+<!--                             <div class="col-lg-12 text-center">
                                 <div id="success"></div>
                                 <button type="submit" class="btn btn-xl">Send Message</button>
-                            </div>
+                            </div -->>
                         </div>
                     </form>
                 </div>
