--- a/index.html
+++ b/index.html
@@ -222,13 +222,15 @@
     <section id="contact">
         <div class="container">
             <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Contact Me</h2>
+                    <h3 class="section-subheading text-muted">You can contact me using the attached links, or via the form.</h3>
+                </div>
+            </div>
+            <div class="row">
                 <div class="col-lg-12">
                     <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row">
-                            <div class="col-sm-6 text-center">
-                                <h2 class="section-heading">Contact Me</h2>
-                                <h3 class="section-subheading text-muted">You can contact me using the attached links, or via the form.</h3>
-                            </div>
 <!--                        <div class="col-md-6">
                                 <div class="form-group">
                                     <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
@@ -250,6 +252,10 @@
                             <div class="col-sm-6">
                                 <div class="team-member">
                                     <img src="img/team/zoe.jpg" class="img-responsive img-rounded" alt="">
+                                </div>
+                              </div>
+                            <div class="col-sm-6">
+                                <div class="team-member">
                                     <h4>Zoë Balkwell</h4>
                                     <p class="text-muted">Full Stack Developer and BA</p>
                                     <ul class="list-inline social-buttons">
