--- a/index.html
+++ b/index.html
@@ -137,6 +137,20 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
+                        <img src="img/portfolio/baml.jpeg" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Bank of America Merrill Lynch</h4>
+                        <p class="text-muted">Production Support Automation</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
                         <img src="img/portfolio/gs.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
@@ -145,7 +159,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -159,7 +173,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -173,7 +187,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -188,7 +202,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -197,22 +211,8 @@
                         <img src="img/portfolio/networking.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Extra Curricular</h4>
-                        <p class="text-muted">Womens Networks, Graduate Recruiting and Peer Lead Training</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/team.jpg" class="img-responsive" alt="">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4>Further Experience</h4>
-                        <p class="text-muted">Languages, Leadership and Teamwork</p>
+                        <h4>Further Experience & Extra Curricular</h4>
+                        <p class="text-muted">Womens Networks, Graduate Recruiting, Peer Lead Training, Languages, Leadership and Teamwork</p>
                     </div>
                 </div>
             </div>
@@ -256,7 +256,7 @@
                               </div>
                             <div class="col-sm-6">
                                 <div class="team-member">
-                                    <h4>Zoë Balkwell</h4>
+                                    <h4 color='#16ACD1' >Zoë Balkwell</h4>
                                     <p class="text-muted">Full Stack Developer and BA</p>
                                     <ul class="list-inline social-buttons">
                                         <li><a href="https://twitter.com/ZoeBalkwell"><i class="fa fa-twitter"></i></a>
@@ -265,6 +265,8 @@
                                         </li>
                                         <li><a href="http://www.linkedin.com/profile/view?id=65502368&trk=nav_responsive_tab_profile"><i class="fa fa-linkedin"></i></a>
                                         </li>
+                                        <li><a href="img/portfolio/ZoeBalkwell.pdf"><i class="fa fa-download"></i></a></li>
+
                                     </ul>
                                 </div>
                               </div>
@@ -303,8 +305,43 @@
     <!-- Portfolio Modals -->
     <!-- Use the modals below to showcase details about your portfolio projects! -->
 
+
     <!-- Portfolio Modal 1 -->
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>Bank Of America Merrill Lynch</h2>
+                            <p class="item-intro text-muted">Production Support Automation</p>
+                            <p class="item-intro text-muted">August 2014 – Present</p>
+                            <p>Equities Tradeplant provides full stack support across multiple lines of business, demanding fast learning and wide understanding in high-pressure situations. <p>
+                            <h4>Tasks & Responsibilities </h4>
+                            <li>Identifying challenges, and designing and developing innovative solutions to optimise workflows and automate production support systems.</li>
+                            <li>Mapping user flows across multiple platforms.</li>
+                            <li>Managing intercompany projects and leading the innovation project group to develop skills and tools.</li>
+                            <h4>Achievements</h4>
+                            <li>Created a Contract Compare Break management tool that saves 3 hours per day, creating audit trails and reducing the possibility of human error.</li> 
+                            <li>Co-created a firmwide tool to help mitigate the risks of unexpected environment changes.</li> 
+                            <li>Project managing the implementation of new workflows, interacting with both internal and external stakeholders. </li>
+
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Section</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+        <!-- Portfolio Modal 1 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -340,7 +377,7 @@
     </div>
 
     <!-- Portfolio Modal 2 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -369,7 +406,7 @@
     </div>
 
     <!-- Portfolio Modal 3 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -399,7 +436,7 @@
     </div>
 
     <!-- Portfolio Modal 4 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -447,7 +484,7 @@
     </div>
 
     <!-- Portfolio Modal 5 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -461,6 +498,12 @@
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h2>Extra Curricular</h2>
+
+                            <hr>
+                            <p class="item-intro">Teaching Assistant, Code First: Girls</p>
+                            <p class="item-intro text-muted">February 2015 – Present</p>
+                            <class="icon-ok">Code First: Girls is a charitable organisation that provides technology education to young women who want to develop their skills. Helping a class of 35 young women develop and release their first websites. Assisting with the teaching of HTML and CSS and providing support and help to students from all academic backgrounds. </>
+                            </p>
 
                             <hr>
                             <p class="item-intro">European Women in Technology Network, Recruiting Pillar Member</p>
@@ -488,6 +531,32 @@
                             <p>
                             <class="icon-ok">Representing and leading the Ladies Squash Team in the BUCs and Regional leagues, organising the trials, weekly matches, training and socials. <br />Encouraging individuals to perform to their best ability, ensuring they get the support and training they require to reach their goals. (One member of my team climbing in the World Rankings from 135th to 42nd during that time.) </>
                             </p>
+
+                            <hr>
+
+                            <h2>Further Experience</h2>
+                            <p class="item-intro text-muted">Languages, Leadership and Teamwork</p>
+                            <hr>
+                            <p class="item-intro">Languages</p>
+                            <img class="img-responsive img-centered" src="img/portfolio/languages.jpg" alt="">
+                            <hr>
+                            <p class="item-intro">Head of the Worksop College CCF Contingency</p>
+                            <p class="item-intro text-muted">April 2007 - July 2009</p>
+                            <p>
+                            <class="icon-ok">Developed the organisational and interpersonal skills that enable me to arrange and execute weekly educational and adventure training for the sixty students involved. </>
+                            </p>
+                            <hr>
+                            <p class="item-intro">Royal Air Force Air Cadet Leadership Course, RAF Cranwell </p>
+                            <p class="item-intro text-muted">Summer 2008</p>
+                            <p>
+                            <class="icon-ok">Trained me to excel individually and as a team member, interact with other people and adapt to new challenges. </>
+                            <hr>
+                            <p class="item-intro">Air Cadet Gliding Scholarship, RAF Halton </p>
+                            <p class="item-intro text-muted">Summer 2007</p>
+                            <p>
+                            <class="icon-ok">I learnt to fly a Vigilant Glider Aircraft in one week, and completed a solo flight within the aircraft. <br />Regular flying with the air cadets gave me valuable experience of physics in action which could be directly applied to my studies. </>
+                            </p>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Section</button>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Section</button>
                         </div>
                     </div>
@@ -497,7 +566,7 @@
     </div>
 
     <!-- Portfolio Modal 6 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
+  <!--   <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -509,7 +578,6 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <!-- Project Details Go Here -->
                             <h2>Further Experience</h2>
                             <p class="item-intro text-muted">Languages, Leadership and Teamwork</p>
                             <hr>
@@ -538,7 +606,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- jQuery Version 1.11.0 -->
     <script src="js/jquery-1.11.0.js"></script>
